Fix profile picture align

--- a/app/assets/stylesheets/components/profile_page.scss
+++ b/app/assets/stylesheets/components/profile_page.scss
@@ -173,7 +173,7 @@
     -webkit-border-radius: 50%;
     border-radius: 50%;
     width: 104px;
-    height: 104px;
+    // height: 104px;
     overflow: hidden;
     margin: 0 auto;
     position: relative;
@@ -414,7 +414,8 @@
 
 .avatar{
   height: 100px;
-  width: auto;
+  // width: auto;
+  object-fit: cover;
 }
 
 .profile-show-page-button{
